@@ -8,15 +8,9 @@ Build-Depends: autotools-dev,
                debhelper (>= 8.1.3),
                dh-autoreconf,
                doxygen,
-               gcc-multilib [amd64 i386 powerpc ppc64 s390 sparc],
-               lib32gcc1 [amd64 ppc64],
-               lib64gcc1 [i386 powerpc sparc s390],
-               libc6-dev-amd64 [i386],
+               gcc-multilib [amd64],
+               lib32gcc1 [amd64],
                libc6-dev-i386 [amd64],
-               libc6-dev-powerpc [ppc64],
-               libc6-dev-ppc64 [powerpc],
-               libc6-dev-s390x [s390],
-               libc6-dev-sparc64 [sparc],
                python-dev
 Standards-Version: 3.9.2
 Homepage: http://www.alsa-project.org/
@@ -62,38 +56,10 @@ Description: debugging symbols for libasound2
  .
  ALSA is the Advanced Linux Sound Architecture.
 
-Package: lib64asound2
-Architecture: i386 powerpc s390 sparc
-Depends: libasound2 (= ${binary:Version}),
-         ${bilib:depends},
-         ${misc:Depends},
-         ${shlibs:Depends}
-Suggests: lib64asound2-plugins (>= 1.0.18)
-Breaks: libasound2-plugins (<< 1.0.18)
-Description: shared library for ALSA applications (64 bit)
- This package contains the ALSA library (64 bit) and its standard
- plugins.
- .
- ALSA is the Advanced Linux Sound Architecture.
-
-Package: lib64asound2-dev
-Architecture: i386 powerpc s390 sparc
-Section: libdevel
-Depends: lib64asound2 (= ${binary:Version}),
-         libasound2-dev (= ${binary:Version}),
-         ${bidev:depends},
-         ${misc:Depends}
-Suggests: libasound2-doc
-Description: shared library for ALSA applications -- development files (64 bit)
- This package contains files required for developing software
- that makes use of lib64asound2, the ALSA library (64 bit).
- .
- ALSA is the Advanced Linux Sound Architecture.
-
 Package: lib32asound2
-Architecture: amd64 ppc64
+Architecture: amd64
 Depends: libasound2 (= ${binary:Version}),
-         ${bilib:depends},
+         ${bilib:Depends},
          ${misc:Depends},
          ${shlibs:Depends}
 Suggests: lib32asound2-plugins (>= 1.0.18)
@@ -108,11 +74,11 @@ Description: shared library for ALSA applications (32 bit)
  ALSA is the Advanced Linux Sound Architecture.
 
 Package: lib32asound2-dev
-Architecture: amd64 ppc64
+Architecture: amd64
 Section: libdevel
 Depends: lib32asound2 (= ${binary:Version}),
          libasound2-dev (= ${binary:Version}),
-         ${bidev:depends},
+         ${bidev:Depends},
          ${misc:Depends}
 Suggests: libasound2-doc
 Breaks: libc6-i386 (<= 2.9-18)
