@@ -1,1 +1,0 @@
-usr/share/doc/libasound2-dev /usr/share/doc/lib64asound2-dev
