@@ -1,1 +1,0 @@
-usr/share/doc/libasound2 /usr/share/doc/lib64asound2
