@@ -2,6 +2,10 @@ alsa-lib (1.0.25-2) UNRELEASED; urgency=low
 
   * Stop Build-Depending on libcxxtools-dev. Why we were doing this is a
     mystery.
+  * Put the bi-arch horror on a diet: remove all lib64* stuff, and support
+    lib32* for amd64 only (there's no point in supporting ppc64 in light
+    of multiarch). Simplify debian/rules bi-arch bits assuming the install
+    dir is /usr/lib32 and doing no other calculations.
 
  -- Jordi Mallach <jordi@debian.org>  Tue, 31 Jan 2012 01:01:41 +0100
 
